--- a/documentos-web/src/main/webapp/src/modules/fotocopias/fotocopias.list.html
+++ b/documentos-web/src/main/webapp/src/modules/fotocopias/fotocopias.list.html
@@ -62,7 +62,7 @@
                       <div class="middleLibro">
                           <a ui-sref="fotocopiaDetail({fotocopiaId: fotocopia.id})" style="font-size: 18px; padding-top: 10%;" class="hoverDeLibroIcono"><span><i class="fas fa-eye" style="font-size: 24px; "></i></span> Ver Más   <br> {{fotocopia.precio|currency:COP:0}}</a>
                           
-                    
+                    <a><i ng-click="delete(fotocopia)" class=" canequita fas fa-trash" style="color:darkgrey; margin-left:15%; "></i></a>
                       </div>
                      <div class="b">
                         {{fotocopia.nombre}}
