--- a/documentos-web/src/main/webapp/src/modules/carrito/carrito-list.html
+++ b/documentos-web/src/main/webapp/src/modules/carrito/carrito-list.html
@@ -23,7 +23,7 @@
                     </thead>
                     
                     <tbody>
-                        <tr ng-repeat="documento in carro">
+                        <tr ng-repeat="documento in carro track by $index">
                             <td class="col-md-9"><em>{{documento.nombre}}</em></td>
                             <td class="col-md-1" style="text-align: center">1</td>
                             <td class="col-md-1 text-center">${{documento.precio|currency:"":0}}</td>
